; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_sub.c_reset_subtitles.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_sub.c_reset_subtitles.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.MPContext = type { i32 }
%struct.track = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.MPContext*, %struct.track*)* @reset_subtitles to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @reset_subtitles(%struct.MPContext* %0, %struct.track* %1) #0 {
  %3 = alloca %struct.MPContext*, align 8
  %4 = alloca %struct.track*, align 8
  store %struct.MPContext* %0, %struct.MPContext** %3, align 8
  store %struct.track* %1, %struct.track** %4, align 8
  %5 = load %struct.track*, %struct.track** %4, align 8
  %6 = getelementptr inbounds %struct.track, %struct.track* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %21

9:                                                ; preds = %2
  %10 = load %struct.track*, %struct.track** %4, align 8
  %11 = getelementptr inbounds %struct.track, %struct.track* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = call i32 @sub_reset(i64 %12)
  %14 = load %struct.track*, %struct.track** %4, align 8
  %15 = getelementptr inbounds %struct.track, %struct.track* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = load %struct.MPContext*, %struct.MPContext** %3, align 8
  %18 = getelementptr inbounds %struct.MPContext, %struct.MPContext* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @sub_set_play_dir(i64 %16, i32 %19)
  br label %21

21:                                               ; preds = %9, %2
  %22 = load %struct.MPContext*, %struct.MPContext** %3, align 8
  %23 = call i32 @term_osd_set_subs(%struct.MPContext* %22, i32* null)
  ret void
}

declare dso_local i32 @sub_reset(i64) #1

declare dso_local i32 @sub_set_play_dir(i64, i32) #1

declare dso_local i32 @term_osd_set_subs(%struct.MPContext*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
